# Project-Worm

./: .gitignore  CMakeLists.txt  cmake_install.cmake
shaders/fragment/: fragmentshader.glsl
shaders/vertex/: vertexshader.glsl
src/: Mesh.cpp  Mesh.hpp  MeshView.cpp  MeshView.hpp  Project_Worm.cpp  TrackBallCamera.cpp  TrackBallCamera.hpp  Triangle.hpp  Vertex.cpp  Vertex.hpp  Worm.cpp  Worm.hpp  lol.txt
